# jacobson

./: README.md
about-me/: README.md  profile.md
devops-portfolio/: README.md
devops-portfolio/projects/: README.md
devops-portfolio/projects/k8s-poc/flash-cards/: .notes  404.html  50x.html  Dockerfile  README.md  build-image.sh  build.sh  index.html  nginx.conf  package.json  setup.sh  start.sh  update.sh
devops-portfolio/projects/k8s-poc/flash-cards/assets/css/: cards.css  dark-mode.css  main.css
devops-portfolio/projects/k8s-poc/flash-cards/assets/js/: cards.js
devops-portfolio/projects/k8s-poc/flash-cards/data/: cicd.js  devops-core.js  docker.js  git.js  kubernetes.js  networking.js
devops-portfolio/projects/k8s-poc/flash-cards/k8s/: deploy.sh
devops-portfolio/projects/k8s-poc/flash-cards/k8s/base/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
devops-portfolio/projects/k8s-poc/flash-cards/k8s/overlays/dev/: kustomization.yaml
devops-portfolio/projects/k8s-poc/flash-cards/k8s/overlays/prod/: kustomization.yaml
devops-portfolio/projects/k8s-poc/flash-cards/pages/: ci-cd.html  devops-core.html  docker.html  git.html  kubernetes.html  networking.html
devops-portfolio/projects/k8s-poc/flash-cards/public/: index.html  manifest.json
devops-portfolio/projects/k8s-poc/flash-cards/server/: app.js  package.json
devops-portfolio/projects/k8s-poc/flash-cards/src/: App.css  App.js  index.js  serviceWorkerRegistration.js
devops-portfolio/projects/k8s-poc/flash-cards/src/components/: FlashCard.css  FlashCard.js  FlashCardDeck.css  FlashCardDeck.js  Navigation.css  Navigation.js  SystemInfo.css  SystemInfo.js
devops-portfolio/projects/rust-sys-resources-app/rust-project/: README.md
devops-portfolio/projects/rust-sys-resources-app/rust-project/systeminfo/: Cargo.toml  systeminfo.service
devops-portfolio/projects/rust-sys-resources-app/rust-project/systeminfo/benches/: system_info_bench.rs
devops-portfolio/projects/rust-sys-resources-app/rust-project/systeminfo/src/: lib.rs  main.rs  service.rs
devops-portfolio/projects/rust-sys-resources-app/rust-project/testproject/: main  main.rs
