[package]
name = "systeminfo"
version = "0.1.0"
edition = "2021"
authors = ["Yakov Avshalom <yakov.av@gmail.com>"]
description = "Gets the system hardware and os information"
keywords = ["hardware", "operatingsystem", "os", "system", "information"]
readme = "README.md"
license = "MIT"

[dependencies]
sysinfo = "0.29.11"  # Modern system information library
thiserror = "1.0.47"  # For better error handling
clap = { version = "4.5.1", features = ["derive"] }  # Command line argument parsing
tabled = "0.15.0"  # For pretty table output
ctrlc = "3.4.2"    # For handling Ctrl+C in watch mode
chrono = "0.4.34"  # For timestamp formatting
colored = "2.1.0"  # For terminal colors

[dev-dependencies]
criterion = "0.5.1"  # For benchmarking
pretty_assertions = "1.4.0"  # For better test assertions

[[bench]]
name = "system_info_bench"
harness = false
