[package]
name = "systeminfo"
version = "0.1.0"
edition = "2021"
authors = ["Yakov Avshalom <yakov.av@gmail.com>"]
description = "Gets the system hardware and os information"
keywords = ["hardware", "operatingsystem", "os", "system", "information"]
readme = "README.md"
license = "MIT"

[dependencies]
sysinfo = "0.29.10"  # Modern system information library
thiserror = "1.0"  # For better error handling
clap = { version = "4.4", features = ["derive"] }  # Command line argument parsing
colored = "2.0"  # For terminal colors
ctrlc = "3.4"    # For handling Ctrl+C in watch mode
chrono = "0.4"  # For timestamp formatting
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization
serde_json = "1.0"  # For JSON serialization
tokio = { version = "1.32", features = ["full"] }  # For async runtime
axum = { version = "0.7", features = ["tokio"] }  # For web framework
tower = { version = "0.4", features = ["util"] }  # For web framework utilities
tower-http = { version = "0.5", features = ["trace"] }  # For web framework tracing
prometheus = "0.13"  # For metrics
tracing = "0.1"  # For tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # For tracing subscriber

[dev-dependencies]
criterion = "0.5"  # For benchmarking

[[bench]]
name = "system_info_bench"
harness = false
